Стили для Главной

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,38 @@
+
+@import "blocks/advantages.less";
+@import "blocks/button.less";
+@import "blocks/commercial.less";
+@import "blocks/copyright.less";
+@import "blocks/form.less";
+@import "blocks/logo.less";
+@import "blocks/page-footer.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-form.less";
+@import "blocks/page-header.less";
+@import "blocks/page-intro.less";
+@import "blocks/photo.less";
+@import "blocks/promo-photo.less";
+@import "blocks/promo.less";
+@import "blocks/reason.less";
+@import "blocks/reasons.less";
+@import "blocks/social.less";
+@import "variables.less";
+@import "mixins.less";
+
 body {
-  background: red;
+  margin: 0;
+  padding: 0;
+
+  font-family: "PT Sans", Arial, sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: @text-dark;
+
+  text-transform: uppercase;
+
+  width: 320px;
+
+  background-position: top center;
 }
