--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,19 +1,18 @@
 .page-intro {
-  padding-right: 37px;
-  padding-left: 37px;
-  padding-top: 46px;
+  padding-right: 35px;
+  padding-left: 35px;
+  padding-top: 42px;
 
   text-align: center;
-
 }
 
 .page-intro__title {
   margin: 0;
   padding: 0;
-  font-style: normal;
+  font-style: bold;
   font-size: 18px;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .page-intro__text {
@@ -24,4 +23,11 @@
 
 .page-intro--decoration {
   padding-bottom: 8px;
+}
+
+.page-intro--inner {
+  padding-right: @padding-side;
+  padding-left: @padding-side;
+  padding-top: 40px;
+  padding-bottom: 28px;
 }
