--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -14,10 +14,10 @@
 .reason__title {
   margin: 0;
   padding: 0;
-  font-style: normal;
+  font-style: bold;
   font-size: 18px;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 700;
 
 }
 
@@ -44,8 +44,8 @@
 .reason__wrapper {
   margin: 0;
   padding: 0;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: @padding-side;
+  margin-right: @padding-side;
   padding-top: 33px;
   padding-bottom: 33px;
 
