--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,3 +7,15 @@
 @text-dark: #000000;
 
 @dark-secondary: #d6d6d6;
+
+@semi-dark: #f2f2f2;
+
+@padding-side: 20px;
+
+@padding-top: 23px;
+
+@padding-bottom: 28px;
+
+@width: 280px;
+
+@border: 1px solid #d6d6d6;
