--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,7 +1,7 @@
 .button {
   font-style: bold;
-  font-size: 21px;
-  line-height: 26px;
+  font-size: @font-medium;
+  line-height: @line-height;
   font-weight: 700;
   color: @text-light;
 
