--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,5 +1,5 @@
 .copyright__content {
-  line-height: 26px;
+  line-height: @line-height;
 }
 
 .copyright__icon {/*почему не отображается иконка?*/
