--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -20,21 +20,21 @@
   text-align: center;
 
   font-style: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: @font-size;
+  line-height: @line-height;
   font-weight: 700;
 }
 
 .form__group-title {
   font-style: normal;
-  line-height: 26px;
+  line-height: @line-height;
   font-weight: 400;
 }
 
 .form__field {
   font-style: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: @font-size;
+  line-height: @line-height;
   font-weight: 700;
 
   border: 0;
