--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,9 +11,8 @@
 }
 
 .main-nav__link {
-  font-family: "PT Sans", Arial, sans-serif;
   font-style: bold;
-  font-size: 18px;
+  font-size: @font-size;
   line-height: 40px;
   font-weight: 700;
   color: @text-light;
