--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -17,13 +17,13 @@
 
 .promo-photo__title {
   font-style: bold;
-  line-height: 24px;
+  line-height: @line-medium;
   font-weight: 700;
 }
 
 .promo-photo__subtitle {
   font-style: normal;
-  line-height: 24px;
+  line-height: @line-medium;
   font-weight: 400;
 
   text-transform: none;
