--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -5,8 +5,8 @@
 
   text-align: center;
 
-  padding-left: 33px;
-  padding-right: 33px;
+  padding-left: @padding-side;
+  padding-right: @padding-side;
   padding-top: 43px;
   padding-bottom: 46px;
 }
@@ -15,10 +15,9 @@
   margin: 0;
   padding: 0;
   font-style: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: @font-size;
+  line-height: @line-height;
   font-weight: 700;
-
 }
 
 .reason__index-number {
@@ -49,11 +48,11 @@
   padding-top: 33px;
   padding-bottom: 33px;
 
-  width: 280px;
+  width: @width;
 }
 
 .reason__border {
-  border-bottom: 1px solid @dark-secondary;
+  border-bottom: @border;
 }
 
 .reason--decoration {
