--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,8 @@
 .advantages {
   text-align: left;
+
+  margin: 0;
+  padding: 0;
 }
 
 .advantages__list {
@@ -15,8 +18,8 @@
   margin: 0;
   padding: 0;
   font-style: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: @font-size;
+  line-height: @line-height;
   font-weight: 700;
 
   padding-left: 70px;
@@ -39,7 +42,7 @@
 
   position: absolute;
   top: 25px;
-  left: 20px;
+  left: @padding-side;
 
   width: 40px;
   height: 37px;
@@ -58,7 +61,7 @@
 
   position: absolute;
   top: 25px;
-  left: 20px;
+  left: @padding-side;
 
   width: 35px;
   height: 40px;
@@ -77,7 +80,7 @@
 
   position: absolute;
   top: 25px;
-  left: 20px;
+  left: @padding-side;
 
   width: 38px;
   height: 35px;
