--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -11,15 +11,15 @@
   margin: 0;
   padding: 0;
   font-style: bold;
-  font-size: 21px;
-  line-height: 26px;
+  font-size: @font-medium;
+  line-height: @line-height;
   font-weight: 700;
 }
 
 .commercial__text {
   margin: 0;
   padding: 0;
-  line-height: 24px;
+  line-height: @line-medium;
 }
 
 .commercial__link {
