--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -8,7 +8,7 @@
 
 .page-footer__hashtag {
   font-style: bold;
-  font-size: 21px;
-  line-height: 26px;
+  font-size: @font-medium;
+  line-height: @line-height;
   font-weight: 700;
 }
