--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,6 +1,8 @@
 .page-intro {
-  padding-right: 35px;
-  padding-left: 35px;
+  margin: 0;
+  padding: 0;
+  padding-right: @padding-side;
+  padding-left: @padding-side;
   padding-top: 42px;
 
   text-align: center;
@@ -10,15 +12,15 @@
   margin: 0;
   padding: 0;
   font-style: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: @font-size;
+  line-height: @line-height;
   font-weight: 700;
 }
 
 .page-intro__text {
   margin: 0;
   padding: 0;
-  line-height: 26px;
+  line-height: @line-height;
 }
 
 .page-intro--decoration {
