--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -19,3 +19,11 @@
 @width: 280px;
 
 @border: 1px solid #d6d6d6;
+
+@font-size: 18px;
+
+@font-medium: 21px;
+
+@line-height: 26px;
+
+@line-medium: 24px;
