--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,13 +1,12 @@
 .button {
-  font-style: bold;
-  font-size: @font-medium;
-  line-height: @line-height;
+  font-size: @button-font-size;
+  line-height: @button-line-height;
   font-weight: 700;
   color: @text-light;
 
   background-color: @text-info;
 
-  width: @width;
+  width: @content-width;
 
   border: none;
 }
