--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,8 @@
 .copyright__content {
-  line-height: @line-height;
+  line-height: @title-line-height;
 }
 
-.copyright__icon {/*почему не отображается иконка?*/
+.copyright__icon {
   background-image: url(../img/logo-htmlacademy.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
