--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -11,8 +11,7 @@
 }
 
 .main-nav__link {
-  font-style: bold;
-  font-size: @font-size;
+  font-size: @main-nav-font-size;
   line-height: 40px;
   font-weight: 700;
   color: @text-light;
