--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -7,8 +7,7 @@
 }
 
 .page-footer__hashtag {
-  font-style: bold;
-  font-size: @font-medium;
-  line-height: @line-height;
+  font-size: @hashtag-font-size;
+  line-height: @hashtag-line-height;
   font-weight: 700;
 }
