--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -1,7 +1,7 @@
 .promo-photo {
   margin: 0;
   padding: 0;
-  padding-top: 23px;
+  padding-top: @padding-top;
   padding-bottom: 23px;
   padding-right: @padding-side;
   padding-left: @padding-side;
@@ -16,14 +16,13 @@
 }
 
 .promo-photo__title {
-  font-style: bold;
-  line-height: @line-medium;
+  line-height: @promo-photo-line-height;
   font-weight: 700;
 }
 
 .promo-photo__subtitle {
   font-style: normal;
-  line-height: @line-medium;
+  line-height: @promo-photo-line-height;
   font-weight: 400;
 
   text-transform: none;
