--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,6 @@
-
+@import "variables.less";
+@import "mixins.less";
+@import "blocks/global.less";
 @import "blocks/advantages.less";
 @import "blocks/button.less";
 @import "blocks/commercial.less";
@@ -16,23 +18,3 @@
 @import "blocks/reason.less";
 @import "blocks/reasons.less";
 @import "blocks/social.less";
-@import "variables.less";
-@import "mixins.less";
-
-body {
-  margin: 0;
-  padding: 0;
-
-  font-family: "PT Sans", Arial, sans-serif;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-  color: @text-dark;
-
-  text-transform: uppercase;
-
-  width: 320px;
-
-  background-position: top center;
-}
