--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -17,9 +17,8 @@
 .advantages__item-title {
   margin: 0;
   padding: 0;
-  font-style: bold;
-  font-size: @font-size;
-  line-height: @line-height;
+  font-size: @title-font-size;
+  line-height: @title-line-height;
   font-weight: 700;
 
   padding-left: 70px;
