--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -10,16 +10,15 @@
 .commercial__title {
   margin: 0;
   padding: 0;
-  font-style: bold;
-  font-size: @font-medium;
-  line-height: @line-height;
+  font-size: @heading-font-size;
+  line-height: @heading-line-height;
   font-weight: 700;
 }
 
 .commercial__text {
   margin: 0;
   padding: 0;
-  line-height: @line-medium;
+  line-height: @text-line-height;
 }
 
 .commercial__link {
