--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -11,16 +11,15 @@
 .page-intro__title {
   margin: 0;
   padding: 0;
-  font-style: bold;
-  font-size: @font-size;
-  line-height: @line-height;
+  font-size: @title-font-size;
+  line-height: @title-line-height;
   font-weight: 700;
 }
 
 .page-intro__text {
   margin: 0;
   padding: 0;
-  line-height: @line-height;
+  line-height: @title-line-height;
 }
 
 .page-intro--decoration {
