--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -14,9 +14,8 @@
 .reason__title {
   margin: 0;
   padding: 0;
-  font-style: bold;
-  font-size: @font-size;
-  line-height: @line-height;
+  font-size: @title-font-size;
+  line-height: @title-line-height;
   font-weight: 700;
 }
 
@@ -48,7 +47,7 @@
   padding-top: 33px;
   padding-bottom: 33px;
 
-  width: @width;
+  width: @content-width;
 }
 
 .reason__border {
