--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -16,14 +16,32 @@
 
 @padding-bottom: 28px;
 
-@width: 280px;
+@content-width: 280px;
 
 @border: 1px solid #d6d6d6;
 
-@font-size: 18px;
+@title-font-size: 18px;
 
-@font-medium: 21px;
+@title-line-height: 26px;
 
-@line-height: 26px;
+@placeholder-font-size: 18px;
 
-@line-medium: 24px;
+@placeholder-line-height: 26px;
+
+@main-nav-font-size: 18px;
+
+@heading-line-height: 26px;
+
+@heading-font-size: 21px;
+
+@button-line-height: 26px;
+
+@button-font-size: 21px;
+
+@hashtag-line-height: 26px;
+
+@hashtag-font-size: 21px;
+
+@text-line-height: 24px;
+
+@promo-photo-line-height: 24px;
