--- a/source/less/blocks/global.less
+++ b/source/less/blocks/global.less
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/ptsans.woff);
+  src: url(../fonts/ptsans.woff2);
+}
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/ptsansbold.woff);
+  src: url(../fonts/ptsansbold.woff2);
+}
+
 body {
   margin: 0;
   padding: 0;
