--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -13,11 +13,9 @@
   border-bottom: @border;
   padding-left: @padding-side;
   padding-right: @padding-side;
+  margin-top: @padding-top;
 }
 
-.form__group-inner {
-  border-top: @border;
-}
 
 .form__group-heading {
   text-align: center;
