--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.page-intro--border {
+  border-bottom: @border;
+}
+
 .page-intro__title {
   margin: 0;
   padding: 0;
