--- a/source/less/blocks/global.less
+++ b/source/less/blocks/global.less
@@ -2,15 +2,15 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/ptsans.woff);
-  src: url(../fonts/ptsans.woff2);
+  src: url("/fonts/ptsans.woff2") format("woff2"),
+  url("/fonts/ptsans.woff") format("woff");
 }
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/ptsansbold.woff);
-  src: url(../fonts/ptsansbold.woff2);
+  src: url("/fonts/ptsansbold.woff2") format("woff2"),
+  url("/fonts/ptsansbold.woff") format("woff");
 }
 
 body {
