--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -42,3 +42,17 @@
 
   min-height: 200px;
 }
+
+@media (min-width: @tablet-width) {
+  .commercial__map {
+    background-color: #cbe0a4;
+    background-size: @tablet-width;
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .commercial__map {
+    background-color: #cbe0a4;
+    background-size: @desctop-width;
+  }
+}
