--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -45,3 +45,11 @@
 @text-line-height: 24px;
 
 @promo-photo-line-height: 24px;
+
+@tablet-width: 768px;
+
+@desctop-width: 1200px;
+
+@advantages-tablet-width: 168px;
+
+@advantages-desctop-width: 288px;
