--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -36,3 +36,9 @@
   padding-top: 40px;
   padding-bottom: 28px;
 }
+
+@media (min-width: @tablet-width) {
+  .page-intro--border {
+    border-bottom: none;
+  }
+}
