--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,47 +1,42 @@
 .promo {
   background-image: url(../img/bg-back-mobile@1x.jpg);
-  background-position: 0 0;
+  background-position: 50% 0;
   background-repeat: no-repeat;
+  background-color: #e1eef6;
 
   min-height: 390px;
-}
 
-.promo--decoration {
   position: relative;
-}
-
-.promo--decoration::after {
-  content: "";
-
-  position: absolute;
-  top: 362px;
-  left: 0px;
-
-  width: 323px;
-  height: 30px;
-
-  background-image: url(../img/bg-intro-triangle-mobile.svg);
-  background-position: 0 0;
-  background-repeat: no-repeat;
 }
 
 .promo--inner {
+  background-position: 60% 80%;
   min-height: 160px;
-
-  position: relative;
 }
 
-.promo--inner::after {
-  content: "";
+@media (min-width: @tablet-width) {
+  .promo {
+    background-image: url(../img/bg-back-mobile@1x.jpg);
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: 1200px;
 
-  position: absolute;
-  top: 133px;
-  left: 0px;
+    min-height: 521px;
+  }
 
-  width: 323px;
-  height: 30px;
-
-  background-image: url(../img/bg-intro-triangle-mobile.svg);
-  background-position: 0 0;
-  background-repeat: no-repeat;
+  .promo--inner {
+    background-position: 60% 80%;
+    min-height: 300px;
+  }
 }
+
+  @media (min-width: @desctop-width) {
+    .promo {
+      background-image: url(../img/bg-back-mobile@1x.jpg);
+      background-position: 50% 0;
+      background-repeat: no-repeat;
+      background-size: 1200px;
+
+      min-height: 521px;
+    }
+  }
