--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -50,3 +50,10 @@
   background-position: 0 0;
   background-repeat: no-repeat;
 }
+
+.promo-photo__image {
+  display: block;
+  width: 280px;
+  height: 280px;
+  background-color: #eeb170;
+}
