--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,4 @@
 @import "blocks/reason.less";
 @import "blocks/reasons.less";
 @import "blocks/social.less";
+@import "blocks/page-decoration.less";
