--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -19,3 +19,19 @@
   margin-top: 25px;
   margin-bottom: 37px;
 }
+
+@media (min-width: @tablet-width) {
+  .page-form__button {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@media (min-width: @desctop-width) {
+  .page-form__button {
+    margin: 0;
+    padding: 0;
+    width: 480px;
+    box-sizing: border-box;
+  }
+}
