--- a/source/less/blocks/global.less
+++ b/source/less/blocks/global.less
@@ -5,6 +5,7 @@
   src: url("/fonts/ptsans.woff2") format("woff2"),
   url("/fonts/ptsans.woff") format("woff");
 }
+
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -17,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 21px;
