--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -38,6 +38,24 @@
 }
 
 @media (min-width: @tablet-width) {
+  .page-intro {
+    margin: 0;
+    padding: 0;
+
+    width: 489px;
+
+    margin: 0 auto;
+  }
+
+  .page-intro--inner {
+    margin: 0;
+    padding: 0;
+
+    width: 459px;
+
+    margin: 0 auto;
+  }
+
   .page-intro--border {
     border-bottom: none;
   }
