--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -21,6 +21,8 @@
     padding: 0;
     padding-top: 35px;
     padding-bottom: 35px;
+    padding-left: @tablet-padding-side;
+    padding-right: @tablet-padding-side;
 
     flex-direction: row;
     justify-content: space-around;
