--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -12,6 +12,12 @@
 
 @padding-side: 20px;
 
+@tablet-padding-side: 60px;
+
+@desctop-padding-side: 120px;
+
+@desctop-commercial-padding: 80px;
+
 @padding-top: 23px;
 
 @padding-bottom: 28px;
@@ -47,6 +53,10 @@
 @promo-photo-line-height: 24px;
 
 @tablet-width: 768px;
+
+@tablet-content-width: 648px;
+
+@tablet-item-width: 324px;
 
 @desctop-width: 1200px;
 
