--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -54,7 +54,7 @@
   width: 40px;
   height: 37px;
 
-  background-image: url(../img/icon-house.svg);
+  background-image: url("../img/icon-house.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -73,7 +73,7 @@
   width: 35px;
   height: 40px;
 
-  background-image: url(../img/icon-gift.svg);
+  background-image: url("../img/icon-gift.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -92,7 +92,7 @@
   width: 38px;
   height: 35px;
 
-  background-image: url(../img/icon-burger.svg);
+  background-image: url("../img/icon-burger.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -143,7 +143,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-house.svg);
+    background-image: url("../img/icon-house.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -158,7 +158,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-gift.svg);
+    background-image: url("../img/icon-gift.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -173,7 +173,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-burger.svg);
+    background-image: url("../img/icon-burger.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -194,7 +194,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-house.svg);
+    background-image: url("../img/icon-house.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -209,7 +209,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-gift.svg);
+    background-image: url("../img/icon-gift.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -224,7 +224,7 @@
     width: 40px;
     height: 37px;
 
-    background-image: url(../img/icon-burger.svg);
+    background-image: url("../img/icon-burger.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
