--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -145,7 +145,7 @@
   width: 19px;
   height: 19px;
 
-  background-image: url(../img/icon-phone.svg);
+  background-image: url("../img/icon-phone.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -168,7 +168,7 @@
   width: 17px;
   height: 17px;
 
-  background-image: url(../img/icon-mail.svg);
+  background-image: url("../img/icon-mail.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
