--- a/source/less/blocks/page-decoration.less
+++ b/source/less/blocks/page-decoration.less
@@ -5,7 +5,7 @@
   position: relative;
   z-index: 1;
 
-  background-image: url(../img/bg-intro-triangle-mobile.svg);
+  background-image: url("../img/bg-intro-triangle-mobile.svg");
   background-position: 50% 0;
   background-repeat: no-repeat;
   margin-top: -29px;
@@ -16,7 +16,7 @@
   .page-decoration {
     min-height: 65px;
 
-    background-image: url(../img/bg-intro-triangle.png);
+    background-image: url("../img/bg-intro-triangle.png");
     background-position: 50% 0;
     background-repeat: no-repeat;
     margin-top: -64px;
