--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -40,13 +40,13 @@
   content: "";
 
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 
   width: 22px;
   height: 22px;
 
-  background-image: url(../img/icon-like.svg);
+  background-image: url("../img/icon-like.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
