--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,5 +1,5 @@
 .promo {
-  background-image: url(../img/bg-back-mobile@1x.jpg);
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-color: #e1eef6;
@@ -16,7 +16,7 @@
 
 @media (min-width: @tablet-width) {
   .promo {
-    background-image: url(../img/bg-back-mobile@1x.jpg);
+    background-image: url("../img/bg-back-mobile@1x.jpg");
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: 1200px;
@@ -30,13 +30,13 @@
   }
 }
 
-  @media (min-width: @desctop-width) {
-    .promo {
-      background-image: url(../img/bg-back-mobile@1x.jpg);
-      background-position: 50% 0;
-      background-repeat: no-repeat;
-      background-size: 1200px;
+@media (min-width: @desctop-width) {
+  .promo {
+    background-image: url("../img/bg-back-mobile@1x.jpg");
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: 1200px;
 
-      min-height: 521px;
-    }
+    min-height: 521px;
+  }
   }
