--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -73,13 +73,13 @@
   content: "";
 
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 
   width: 320px;
   height: 40px;
 
-  background-image: url(../img/bg-triangle.svg);
+  background-image: url("../img/bg-triangle.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
   }
