--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,7 +7,7 @@
 }
 
 .copyright__icon {
-  background-image: url(../img/logo-htmlacademy.svg);
+  background-image: url("../img/logo-htmlacademy.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
